force-app/main/default/objects/Account/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Marketing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>