force-app/main/default/objects/Account/fields/MR_Claims__c.field-meta.xml
<CustomField>
    <fullName>MR_Claims__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MR Claims</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsMEjs</relationshipName>
    <type>Lookup</type>
</CustomField>