force-app/main/default/objects/Account/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Freetext field to append notes associated with the account</description>
    <inlineHelpText>Input any notes</inlineHelpText>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>