force-app/main/default/objects/Account/fields/Portfolio_Fund_Management__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Fund_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Management</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>