force-app/main/default/objects/Account/fields/Powerplant__c.field-meta.xml
<CustomField>
    <fullName>Powerplant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Powerplant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsMEjE</relationshipName>
    <type>Lookup</type>
</CustomField>