force-app/main/default/objects/Account/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsMEjO</relationshipName>
    <type>Lookup</type>
</CustomField>