force-app/main/default/objects/Account/fields/pro_Debt_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Debt_Name__c</fullName>
    <formula>Debt__r.FirstName + &#39; &#39; +  Debt__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debt Name</label>
    <type>Text</type>
</CustomField>