force-app/main/default/objects/Account/fields/pro_Insurance__c.field-meta.xml
<CustomField>
    <fullName>pro_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Insurance_Role</relationshipName>
    <type>Lookup</type>
</CustomField>