force-app/main/default/objects/Account/fields/pro_KYC_Approved__c.field-meta.xml
<CustomField>
    <fullName>pro_KYC_Approved__c</fullName>
    <description>Picklist of options to capture the KYC approval status.</description>
    <label>KYC Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - KYC Refresh Requested</fullName>
            </value>
            <value>
                <fullName>No - KYC in progress</fullName>
            </value>
            <value>
                <fullName>No - KYC Materials not received</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <label>No - Do not proceed</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>