force-app/main/default/objects/Account/fields/pro_KYC_Comment__c.field-meta.xml
<CustomField>
    <fullName>pro_KYC_Comment__c</fullName>
    <label>KYC Comment</label>
    <type>TextArea</type>
</CustomField>