force-app/main/default/objects/Account/fields/pro_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Legal_Name__c</fullName>
    <formula>Legal__r.FirstName + &#39; &#39; +  Legal__r.LastName</formula>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>