force-app/main/default/objects/Account/fields/Pro_Party_to_an_active_deal__c.field-meta.xml
<CustomField>
    <fullName>Pro_Party_to_an_active_deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Party to an active deal?</label>
    <type>Checkbox</type>
</CustomField>