force-app/main/default/objects/Account/fields/Pro_Party_to_an_active_lease__c.field-meta.xml
<CustomField>
    <fullName>Pro_Party_to_an_active_lease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked if the Account is listed as a Party in an active lease.</description>
    <label>Party to an active lease?</label>
    <type>Checkbox</type>
</CustomField>