force-app/main/default/objects/Account/fields/pro_Powerplant_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Powerplant_Name__c</fullName>
    <formula>Powerplant__r.FirstName + &#39; &#39; +  Powerplant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Powerplant Name</label>
    <type>Text</type>
</CustomField>