force-app/main/default/objects/Account/fields/pro_Pricing_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Pricing_Name__c</fullName>
    <formula>Pricing__r.FirstName + &#39; &#39; +  Pricing__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Name</label>
    <type>Text</type>
</CustomField>