force-app/main/default/objects/Account/fields/pro_Receivables_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Receivables_Name__c</fullName>
    <formula>Receivables__r.FirstName + &#39; &#39; +  Receivables__r.LastName</formula>
    <label>Receivables Name</label>
    <type>Text</type>
</CustomField>