force-app/main/default/objects/Account/fields/pro_Tax_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Tax_Name__c</fullName>
    <formula>Tax__r.FirstName + &#39; &#39; +  Tax__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Name</label>
    <type>Text</type>
</CustomField>