force-app/main/default/objects/Account/fields/pro_Technical_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Technical_Name__c</fullName>
    <formula>Technical__r.FirstName + &#39; &#39; +  Technical__r.LastName</formula>
    <label>Technical Name</label>
    <type>Text</type>
</CustomField>