force-app/main/default/objects/Account/fields/pro_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Trading_Name__c</fullName>
    <formula>Trading__r.FirstName + &#39; &#39; +  Trading__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Name</label>
    <type>Text</type>
</CustomField>