force-app/main/default/objects/Account/fields/Ranking_grouping__c.field-meta.xml
<CustomField>
    <fullName>Ranking_grouping__c</fullName>
    <label>Ranking grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Top 10</fullName>
            </value>
            <value>
                <fullName>Top 20</fullName>
            </value>
            <value>
                <fullName>Top 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>