force-app/main/default/objects/Account/fields/Receivables__c.field-meta.xml
<CustomField>
    <fullName>Receivables__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receivables</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsMEji</relationshipName>
    <type>Lookup</type>
</CustomField>