force-app/main/default/objects/Account/fields/Registered_Office_Local__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_Local__c</fullName>
    <description>This was added at the time of Implementaiton</description>
    <label>Registered Office</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>