force-app/main/default/objects/Account/fields/Scope_of_Representation__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Representation__c</fullName>
    <description>Note the Scope of Representation associated with the firm</description>
    <inlineHelpText>What is this firm used for?</inlineHelpText>
    <label>Scope of Representation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>