force-app/main/default/objects/Account/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>