force-app/main/default/objects/Account/fields/Technical__c.field-meta.xml
<CustomField>
    <fullName>Technical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>