force-app/main/default/objects/Account/fields/Trading__c.field-meta.xml
<CustomField>
    <fullName>Trading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>