force-app/main/default/objects/Account/recordTypes/Carlyle_Entity.recordType-meta.xml
<RecordType>
    <fullName>Carlyle_Entity</fullName>
    <active>true</active>
    <label>Carlyle Entity</label>
</RecordType>