force-app/main/default/objects/Account/recordTypes/External_Parties.recordType-meta.xml
<RecordType>
    <fullName>External_Parties</fullName>
    <active>true</active>
    <description>Used to create airline SPV/SPC&#39;s to add as Lessee, etc.</description>
    <label>External Parties</label>
</RecordType>