force-app/main/default/objects/Account/recordTypes/leaseworks__Counterparty.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Counterparty</fullName>
    <active>true</active>
    <label>Counterparty</label>
</RecordType>