force-app/main/default/objects/Account/recordTypes/leaseworks__Customer_Account.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Customer_Account</fullName>
    <active>false</active>
    <description>Customer Account</description>
    <label>Customer Account</label>
</RecordType>