force-app/main/default/objects/Account/recordTypes/leaseworks__Lessor.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Lessor</fullName>
    <active>true</active>
    <label>Lessor</label>
</RecordType>