force-app/main/default/objects/Account/recordTypes/leaseworks__Operator.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Operator</fullName>
    <active>true</active>
    <label>Operator</label>
</RecordType>