force-app/main/default/objects/Account/recordTypes/Legal_Counsel.recordType-meta.xml
<RecordType>
    <fullName>Legal_Counsel</fullName>
    <active>true</active>
    <label>Legal Counsel</label>
</RecordType>