force-app/main/default/objects/Account/validationRules/leaseworks__NumericAccountNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__NumericAccountNumber</fullName>
    <active>false</active>
    <description>Account Number for US should be numeric only.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Account Number should be numeric for United States.</errorMessage>
</ValidationRule>