force-app/main/default/objects/Account/validationRules/leaseworks__NumericRoutingNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__NumericRoutingNumber</fullName>
    <active>false</active>
    <description>Account Number for US should be numeric only.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Routing/ABA should be numeric for United States.</errorMessage>
</ValidationRule>