force-app/main/default/objects/Account/validationRules/leaseworks__RoutingNumberRequiredForUS.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__RoutingNumberRequiredForUS</fullName>
    <active>false</active>
    <description>Account Number for United States should be numeric only.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Routing/ABA is required for United States.</errorMessage>
</ValidationRule>