force-app/main/default/objects/Account/validationRules/leaseworks__TypeIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__TypeIsRequired</fullName>
    <active>true</active>
    <description>Type field value is required</description>
    <errorConditionFormula>OR(ISPICKVAL(Type, &quot;None&quot;),ISPICKVAL(Type, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Please select a Type for the Account</errorMessage>
</ValidationRule>