force-app/main/default/objects/Account/listViews/Accounts_Internal.listView-meta.xml
<ListView>
    <fullName>Accounts_Internal</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>leaseworks__Subtype__c</columns>
    <columns>leaseworks__Country__c</columns>
    <columns>leaseworks__Region__c</columns>
    <columns>leaseworks__Days_Since_Last_Interaction__c</columns>
    <columns>leaseworks__Owner_Full_Name__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Carlyle Entity</value>
    </filters>
    <label>Accounts (Internal)</label>
    <sharedTo>
        <group>Legal_Contracts</group>
    </sharedTo>
</ListView>