force-app/main/default/objects/Account/listViews/Airlines.listView-meta.xml
<ListView>
    <fullName>Airlines</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Logo__c</columns>
    <columns>leaseworks__Country__c</columns>
    <columns>leaseworks__Region__c</columns>
    <columns>leaseworks__Days_Since_Last_Interaction__c</columns>
    <columns>leaseworks__Owner_Full_Name__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>leaseworks__Current_Lessee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Operator</value>
    </filters>
    <filters>
        <field>leaseworks__Current_Lessee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <label>Airlines</label>
    <sharedTo>
        <group>Billing_Users</group>
    </sharedTo>
</ListView>