force-app/main/default/objects/Account/listViews/Carlyle_Entities.listView-meta.xml
<ListView>
    <fullName>Carlyle_Entities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>Fund_Local__c</columns>
    <columns>Financing_Local__c</columns>
    <columns>Irish_Tax_Resident_Local__c</columns>
    <columns>Irish_Tax_Number_Local__c</columns>
    <columns>Other_VAT_GST_Number__c</columns>
    <columns>Jurisdiction_of_incorporation_Local__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Carlyle Entity</value>
    </filters>
    <label>Carlyle Entities</label>
</ListView>