force-app/main/default/objects/Account/listViews/Credit_Counterparties.listView-meta.xml
<ListView>
    <fullName>Credit_Counterparties</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Logo__c</columns>
    <columns>leaseworks__Subtype__c</columns>
    <columns>leaseworks__Country__c</columns>
    <columns>leaseworks__Region__c</columns>
    <columns>pro_Reporting_Region__c</columns>
    <columns>leaseworks__Days_Since_Last_Interaction__c</columns>
    <columns>leaseworks__Owner_Full_Name__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>leaseworks__Inactive__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAP_Credit_Counterparty__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Credit Counterparties</label>
</ListView>