force-app/main/default/objects/Account/listViews/Credit_Updates_GCC.listView-meta.xml
<ListView>
    <fullName>Credit_Updates_GCC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Watchlist__c</columns>
    <columns>pro_Credit_Score__c</columns>
    <columns>GCC_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Operator</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.leaseworks__Operator</value>
    </filters>
    <label>Credit Updates GCC</label>
</ListView>