force-app/main/default/objects/Account/listViews/Legal_Counsel.listView-meta.xml
<ListView>
    <fullName>Legal_Counsel</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>leaseworks__Subtype__c</columns>
    <columns>Scope_of_Representation__c</columns>
    <columns>Approved_Counsel__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>leaseworks__Country__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>leaseworks__Owner_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Legal_Counsel</value>
    </filters>
    <label>Legal Counsel</label>
    <sharedTo>
        <group>Legal_Contracts</group>
    </sharedTo>
</ListView>