force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>leaseworks__Inactive__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>Logo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>